Fixed Order step error - Copy last error not showing when log is not listed in logs, because the workflow is not running
git-svn-id: https://xbox/svnroot/Qorus/trunk@5390 e9028eec-4831-4325-a917-4dc279fcb47c

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1594,7 +1594,8 @@ tbody+thead>tr:first-child>td {
 	font-family: "FontAwesome";
 	font-weight: normal;
 	background-color: #fff;
-	margin-left: -9px;
+    margin: 0;
+/*	margin-left: -9px;*/
 	margin-right: 10px;
 	color: red;
 	border: none;
